--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.mi_bandala.springboot.backend.apirest3</groupId>
 	<artifactId>spring-boot-backend-apirest3</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-backend-apirest3</name>
+	<name>Gastos</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
